--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
 
     <section id="bio">
         <h2>Bio</h2>
-        <p>I am Hoda Naseri, a data scientist with extensive experience in machine learning, biostatistics, and health data science. I am currently pursuing advanced research in AI-driven medical diagnostics, with a focus on melanoma detection and FAIR data management systems.</p>
-        <p>My academic background includes a Master’s degree in Data Science and a Bachelor’s degree in Statistics from top-ranked universities in Iran.</p>
+        <p>Welcome to my website!</p>
+        <p>I'm Hoda Naseri, a data scientist with extensive experience in machine learning, biostatistics, and health data science. Currently, I am pursuing advanced research in AI-driven medical diagnostics, focusing on melanoma detection and data management systems. My academic background includes a Master’s degree in Data Science and a Bachelor’s degree in Statistics.</p>
+        <p>In addition to my academic pursuits, I am an author passionate about bringing the lives of influential scientists to middle school students through engaging biographical novels. My goal is to inspire young minds by showcasing the stories of remarkable individuals who have shaped the world of science.</p>
+        <p>When I'm not working on research or writing, I enjoy reading, practicing yoga, exploring new ideas that fuel my creativity, and visiting historical and cultural sites to immerse myself in their stories and significance.</p>
     </section>
 
     <section id="research">
@@ -114,15 +116,16 @@
         </ul>
     </section>
 
-    <section id="publications">
-        <h2>Publications</h2>
-        <ul>
-            <li>
-                <strong>Diagnosis and Prognosis of Melanoma from Dermoscopy Images Using Machine Learning and Deep Learning:</strong> A Systematic Literature Review  
-                <br>Accepted in BMC Cancer Journal (to be published in 2025).
-            </li>
-        </ul>
-    </section>
+<section id="publications">
+    <h2>Publications</h2>
+    <ul>
+        <li>
+            <strong>Diagnosis and Prognosis of Melanoma from Dermoscopy Images Using Machine Learning and Deep Learning:</strong> A Systematic Literature Review  
+            <br>Published in BMC Cancer Journal. <a href="https://doi.org/10.1186/s12885-024-13423-y" target="_blank">https://doi.org/10.1186/s12885-024-13423-y</a>
+        </li>
+    </ul>
+</section>
+
 
     <section id="contact">
         <h2>Contact</h2>
@@ -131,6 +134,8 @@
             <li>Email: <a href="mailto:hodaanaserii@gmail.com" class="email">hodaanaserii@gmail.com</a></li>
             <li>GitHub: <a href="https://github.com/hodanaseri" class="github" target="_blank">hodanaseri</a></li>
             <li>LinkedIn: <a href="https://linkedin.com/in/hoda-naseri" class="linkedin" target="_blank">hoda-naseri</a></li>
+            <li>ORCID: <a href="https://orcid.org/0009-0005-5739-7066" class="ORCID" target="_blank">Hoda Naseri</a></li>
+            
         </ul>
     </section>
 
