--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoda Naseri - Academic Website</title>
+    <title>Hoda Naseri</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -93,7 +93,7 @@
         <h2>Bio</h2>
         <p>Welcome to my website!</p>
         <p>I'm Hoda Naseri, a data scientist with extensive experience in machine learning, biostatistics, and health data science. Currently, I am pursuing advanced research in AI-driven medical diagnostics, focusing on melanoma detection and data management systems. My academic background includes a Master’s degree in Data Science and a Bachelor’s degree in Statistics.</p>
-        <p>In addition to my academic pursuits, I am an author passionate about bringing the lives of influential scientists to middle school students through engaging biographical novels. My goal is to inspire young minds by showcasing the stories of remarkable individuals who have shaped the world of science.</p>
+        <p>In addition to my academic pursuits, I'm an author passionate about bringing the lives of influential scientists to middle school students through engaging biographical novels. My goal is to inspire young minds by showcasing the stories of remarkable individuals who have shaped the world of science.</p>
         <p>When I'm not working on research or writing, I enjoy reading, practicing yoga, exploring new ideas that fuel my creativity, and visiting historical and cultural sites to immerse myself in their stories and significance.</p>
     </section>
 
