--- a/index.html
+++ b/index.html
@@ -115,15 +115,7 @@
             </li>
         </ul>
         <h2>Research Interest</h2>
-        <ul>
-            <li>
-                    <li>Statistical Machine Learning</li> <li>Applied Statistics</li> <li>Time Series</li> <li>Data Mining</li> <li>Biomedical Data Analysis</li> <li>Medical Imaging</li>
-                </ul>
-            </li>
-            <li>
-                </ul>
-            </li>
-        </ul>
+        <p>Statistical Machine Learning, Applied Statistics, Time Series, Data Mining, Biomedical Data Analysis, Medical Imaging</p>
     </section>
 
 <section id="publications">
