--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </ul>
             </li>
         </ul>
-        <h2>Research Interest</h2>
+        <h2>Research Interests</h2>
         <p>Statistical Machine Learning, Applied Statistics, Time Series, Data Mining, Biomedical Data Analysis, Medical Imaging</p>
     </section>
 
