--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!-- LinkedIn -->
         <a href="https://linkedin.com/in/hoda-naseri" target="_blank">
-            <img src="https://img.freepik.com/premium-vector/linkedin-icon_459124-2005.jpg" alt="LinkedIn" width="40" height="40">
+            <img src="https://e7.pngegg.com/pngimages/535/35/png-clipart-computer-icons-symbol-linkedin-email-telephone-symbol-miscellaneous-blue-thumbnail.png" alt="LinkedIn" width="40" height="40">
         </a>
 
         <!-- ORCID -->
