--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mat Mirhosseini</title>
+    <title>Hoda Naseri</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -48,9 +48,8 @@
           <div class="site-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="index.html">My CV</a></li>
-                <li class="nav-item"><a class="nav-link" href="MyArt.html">My Art</a></li>
-                <li class="nav-item"><a class="nav-link" href="MyMusic.html">My Music</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="MyArt.html">Albume</a></li>
                 <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -68,7 +67,7 @@
         <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
-        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Mat Mirhosseini</h2>
+        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Hoda Naseri</h2>
         <p data-aos="fade-left" data-aos-delay="100">Data Scientist</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="right-resume.pdf" target="_blank">Download CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Lets talk</a></div>
       </div>
@@ -95,13 +94,13 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">matmirhosseini@gmail</div>
+            <div class="pb-1 text-secondary">hodaanaserii at gmail</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Phone</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+98(910)003-2128</div>
+            <div class="pb-1 text-secondary">+98(922)704-1179</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
@@ -268,7 +267,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
     <footer class="pt-4 pb-4 text-muted text-center d-print-none">
       <div class="container">
         <div class="my-3">
-          <div class="h4">Mat Mirhosseini</div>
+          <div class="h4">Hoda Naseri</div>
           <div class="footer-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
@@ -278,7 +277,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/matmirhosseini" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/matmirhosseini" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/hodanaseri" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
             </nav>
