--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="py-3 clearfix">
-          <h1 class="site-title mb-0">Mat Mirhosseini</h1>
+          <h1 class="site-title mb-0">Hoda Naseri</h1>
           <div class="site-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="MyArt.html">Albume</a></li>
+                <li class="nav-item"><a class="nav-link" href="MyArt.html">Album</a></li>
                 <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -77,7 +77,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hi, I’m Mat!
+        <p>Hi, I’m Hoda!
 I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a skilled Data Scientist with expertise in healthcare, I specialize in leveraging data to drive innovation and solve complex challenges in the medical field.
 
 </p>
@@ -233,9 +233,9 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
           <h3 class="h6">Address</h3>
           <div class="pb-2 text-secondary">Tehran, Iran</div>
           <h3 class="h6">Phone</h3>
-          <div class="pb-2 text-secondary">+98(910)003-2128</div>
+          <div class="pb-2 text-secondary">+98(922)704-1179</div>
           <h3 class="h6">Email</h3>
-          <div class="pb-2 text-secondary">matmirhosseini@gmail.com</div>
+          <div class="pb-2 text-secondary">hodaanaserii@gmail.com</div>
         </div>
       </div>
       <div class="col d-none d-print-block">
@@ -254,7 +254,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
               </div>
             </div>
             <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/matmirhosseini</span>
+              <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/hodanaseri</span>
               </div>
             </div>
           </div>
