--- a/MyArt.html
+++ b/MyArt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mat M</title>
+    <title>Hoda</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -90,19 +90,17 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="py-3 clearfix">
-          <h1 class="site-title mb-0">Mat Mirhosseini</h1>
+          <h1 class="site-title mb-0">Hoda Naseri</h1>
           <div class="site-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="MyArt.html">My Art</a></li>
-                <li class="nav-item"><a class="nav-link" href="Shiraz.html">Shiraz</a></li>
-                <li class="nav-item"><a class="nav-link" href="Tabriz.html">Tabriz</a></li>
-                <li class="nav-item"><a class="nav-link" href="Isfahan.html">Isfahan</a></li>
+                <li class="nav-item"><a class="nav-link" href="Album.html">Album</a></li>
+                <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://twitter.com/matmirhosseini" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/profile.php?id=61568136706109" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/matmirhosseini" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/matmirhosseini" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/hodanaseri" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a></li>
               </ul>
             </nav>
           </div>
@@ -179,7 +177,7 @@
     <footer class="pt-4 pb-4 text-muted text-center d-print-none">
       <div class="container">
         <div class="my-3">
-          <div class="h4">Mat Mirhosseini</div>
+          <div class="h4">Hoda Naseri</div>
           <div class="footer-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
