--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hoda Naseri</title>
+    <title>Hoda</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -49,7 +49,7 @@
             <nav role="navigation">
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="MyArt.html">Album</a></li>
+                <li class="nav-item"><a class="nav-link" href="Album.html">Album</a></li>
                 <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -179,27 +179,20 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
   <hr class="d-print-none"/>
   <div class="page-break"></div>
   <div class="education-section px-3 px-lg-4 pb-4">
-    <h2 class="h3 mb-4">Education</h2>
+    <h2 class="h3 mb-4">Research Experiences</h2>
     <div class="timeline">
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Masters in Data Science <span class="text-muted h6">from Tarbiat Modares University</span></div>
+          <div class="h5 mb-1">Data Management Researcher: <span class="text-muted h6">from Tarbiat Modares University</span></div>
           <div class="text-muted text-small mb-2">2023 - 2025</div>
           <div>Tarbiat Modares University offers what might be the best interdisciplinary Data Science program in Iran, bringing together expertise from top professors across various fields. This program has given me the chance to explore the cutting edge of science and dive deeply into areas like machine learning, deep learning, data mining, and visualization. My passion for medicine and biology has guided my studies, allowing me to work on diverse datasets such as brain MRI scans for diagnosing dementia, MRI data for endometrial cancer detection, and ultrasound data for assessing fetal health.</div>
         </div>
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Bachelor of Statistics <span class="text-muted h6">from Allame Tabatabei University</span></div>
-          <div class="text-muted text-small mb-2">2018 - 2022</div>
-          <div>Allameh Tabataba’i University is one of Iran’s leading humanities-focused institutions, and its Statistics program benefits from some of the country’s most esteemed professors. My time here was a transformative experience, as I transitioned from adolescence to adulthood while studying a field that had been both a passion and a strength since childhood. The challenges of pursuing a rigorous STEM discipline, combined with the difficulties brought by the COVID-19 pandemic, made this period both demanding and deeply rewarding.</div>
-        </div>
-      </div>
-      <div class="timeline-card timeline-card-success card shadow-sm">
-        <div class="card-body">
-          <div class="h5 mb-1">Mathematics <span class="text-muted h6">from Allame Helli High School</span></div>
-          <div class="text-muted text-small mb-2">2011 - 2016</div>
-          <div>Allameh Helli High Schools (SAMPAD) are elite institutions for gifted and talented students across the country. As the top-ranked high school in the Middle East, Allameh Helli offered an experience far beyond that of a traditional school. With access to state-of-the-art laboratories, unique examinations, and a focus on fostering scientific curiosity rather than rote memorization, it left me with invaluable lessons and a lifelong passion for critical thinking and exploration.</div>
+          <div class="h5 mb-1">Data Scientist:<span class="text-muted h6"> the Biobank of National Brain Mapping Lab</span></div>
+          <div class="text-muted text-small mb-2">2023 - 2025</div>
+          <div>Contributed to building an open data platform for neuroimaging datasets.</div>
         </div>
       </div>
     </div>
@@ -211,7 +204,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
     <h2 class="h3 text mb-3">Contact</h2>
     <div class="row">
       <div class="col-md-7 d-print-none">
-        <div class="my-2"><form action="https://formspree.io/f/xjkvrkpl"
+        <div class="my-2"><form action="https://formspree.io/f/xpwpqqvl"
     method="POST">
   <div class="row">
     <div class="col-6">
