--- a/index.html
+++ b/index.html
@@ -162,19 +162,6 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
       </div>
     </div>
   </div>
-  <hr class="d-print-none"/>
-  <div class="work-experience-section px-3 px-lg-4">
-    <h2 class="h3 mb-4">Work Experience</h2>
-    <div class="timeline">
-      <div class="timeline-card timeline-card-primary card shadow-sm">
-        <div class="card-body">
-          <div class="h5 mb-1">Biobank System Design and Implementation <span class="text-muted h6">at NBML</span></div>
-          <div class="text-muted text-small mb-2">jun,2024 - Present</div>
-          <div>I am currently working as an Online Biobank Design Specialist at the National Brain Mapping Laboratory, where I lead the design and development of a comprehensive biobank for brain imaging and clinical data. My role involves implementing advanced data management systems that adhere to international standards, ensuring secure and efficient access for researchers.</div>
-        </div>
-      </div
-      </div>
-    </div>
   </div>
   <hr class="d-print-none"/>
   <div class="page-break"></div>
@@ -183,21 +170,42 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
     <div class="timeline">
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Data Management Researcher: <span class="text-muted h6">from Tarbiat Modares University</span></div>
+          <div class="h5 mb-1">Data Scientist<span class="text-muted h6">Razi Hospital, Department of Dermatology</span></div>
           <div class="text-muted text-small mb-2">2023 - 2025</div>
           <div>Tarbiat Modares University offers what might be the best interdisciplinary Data Science program in Iran, bringing together expertise from top professors across various fields. This program has given me the chance to explore the cutting edge of science and dive deeply into areas like machine learning, deep learning, data mining, and visualization. My passion for medicine and biology has guided my studies, allowing me to work on diverse datasets such as brain MRI scans for diagnosing dementia, MRI data for endometrial cancer detection, and ultrasound data for assessing fetal health.</div>
         </div>
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Data Scientist:<span class="text-muted h6"> the Biobank of National Brain Mapping Lab</span></div>
-          <div class="text-muted text-small mb-2">2023 - 2025</div>
+          <div class="h5 mb-1">Data Management Researcher<span class="text-muted h6">The Biobank of National Brain Mapping Lab</span></div>
+          <div class="text-muted text-small mb-2">2024 - 2025</div>
           <div>Contributed to building an open data platform for neuroimaging datasets.</div>
         </div>
       </div>
     </div>
   </div>
         
+  <hr class="d-print-none"/>
+  <div class="page-break"></div>
+  <div class="education-section px-3 px-lg-4 pb-4">
+    <h2 class="h3 mb-4">publications</h2>
+    <div class="timeline">
+      <div class="timeline-card timeline-card-success card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Diagnosis and Prognosis of Melanoma from Dermoscopy Images Using Machine Learning and Deep Learning<span class="text-muted h6">A Systematic Literature Review</span></div>
+          <div class="text-muted text-small mb-2">2023 - 2025</div>
+          <div> </div><a href="https://doi.org/10.1186/s12885-024-13423-y" target="_blank" >Published in BMC Cancer Journal.</a>
+        </div>
+      </div>
+      <div class="timeline-card timeline-card-success card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Master’s Thesis<span class="text-muted h6">Melanoma Diagnosis and Malignancy Grading from Multimodal Data Using Deep Learning</span></div>
+          <div class="text-muted text-small mb-2">2024 - 2025</div>
+          <div>Tarbiat Modares University</div>
+        </div>
+      </div>
+    </div>
+  </div>        
   <hr class="d-print-none"/>
         
   <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
