--- a/index.html
+++ b/index.html
@@ -183,10 +183,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
       </div>
     </div>
   </div>
-  </div>
-
-        
-  <hr class="d-print-none"/>
+    <hr class="d-print-none"/>
   <div class="page-break"></div>
   <div class="education-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">publications</h2>
@@ -240,6 +237,10 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
           <div class="pb-2 text-secondary">hodaanaserii@gmail.com</div>
         </div>
       </div>
+  </div>
+</div></div>
+        
+
       <div class="col d-none d-print-block">
         <div class="mt-2">
           <div>
