--- a/Album.html
+++ b/Album.html
@@ -115,8 +115,8 @@
             <div class="row">
               <!-- Gallery Item 1 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/1.jpg" class="image-link">
-                  <img src="images/1.jpg" class="img-fluid" alt="Image 1">
+                <a href="/1742297644940.jpg" class="image-link">
+                  <img src="/1742297644940.jpg" class="img-fluid" alt="Image 1">
                 </a>
                 <div class="image-description">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -124,13 +124,58 @@
               </div>
               <!-- Gallery Item 2 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/2.jpg" class="image-link">
-                  <img src="images/2.jpg" class="img-fluid" alt="Image 2">
+                <a href="/1742297644954.jpg" class="image-link">
+                  <img src="/1742297644954.jpg" class="img-fluid" alt="Image 2">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
               </div>          
+              <!-- Gallery Item 3 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/3.jpg" class="image-link">
+                  <img src="images/3.jpg" class="img-fluid" alt="Image 3">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 4 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/4.jpg" class="image-link">
+                  <img src="images/4.jpg" class="img-fluid" alt="Image 4">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 5 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/5.jpg" class="image-link">
+                  <img src="images/5.jpg" class="img-fluid" alt="Image 5">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 6 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/6.jpg" class="image-link">
+                  <img src="images/6.jpg" class="img-fluid" alt="Image 6">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 7 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/7.jpg" class="image-link">
+                  <img src="images/7.jpg" class="img-fluid" alt="Image 7">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
               <!-- Gallery Item 8 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
                 <a href="images/8.jpg" class="image-link">
@@ -153,6 +198,51 @@
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
                 <a href="images/10.jpg" class="image-link">
                   <img src="images/10.jpg" class="img-fluid" alt="Image 10">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 11 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/11.jpg" class="image-link">
+                  <img src="images/11.jpg" class="img-fluid" alt="Image 11">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 12 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/12.jpg" class="image-link">
+                  <img src="images/12.jpg" class="img-fluid" alt="Image 12">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 13 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/13.jpg" class="image-link">
+                  <img src="images/13.jpg" class="img-fluid" alt="Image 13">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 14 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/14.jpg" class="image-link">
+                  <img src="images/14.jpg" class="img-fluid" alt="Image 14">
+                </a>
+                <div class="image-description">
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+              </div>
+              <!-- Gallery Item 15 -->
+              <div class="col-md-4 col-sm-6 mb-3 gallery-item">
+                <a href="images/15.jpg" class="image-link">
+                  <img src="images/15.jpg" class="img-fluid" alt="Image 15">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
