--- a/Album.html
+++ b/Album.html
@@ -133,8 +133,8 @@
               </div>          
               <!-- Gallery Item 3 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/3.jpg" class="image-link">
-                  <img src="images/3.jpg" class="img-fluid" alt="Image 3">
+                <a href="/1742297644970.jpg" class="image-link">
+                  <img src="/1742297644970.jpg" class="img-fluid" alt="Image 3">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -142,8 +142,8 @@
               </div>
               <!-- Gallery Item 4 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/4.jpg" class="image-link">
-                  <img src="images/4.jpg" class="img-fluid" alt="Image 4">
+                <a href="/1742297645001.jpg" class="image-link">
+                  <img src="/1742297645001.jpg" class="img-fluid" alt="Image 4">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -151,8 +151,8 @@
               </div>
               <!-- Gallery Item 5 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/5.jpg" class="image-link">
-                  <img src="images/5.jpg" class="img-fluid" alt="Image 5">
+                <a href="/1742297645023.jpg" class="image-link">
+                  <img src="/1742297645023.jpg" class="img-fluid" alt="Image 5">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -160,8 +160,8 @@
               </div>
               <!-- Gallery Item 6 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/6.jpg" class="image-link">
-                  <img src="images/6.jpg" class="img-fluid" alt="Image 6">
+                <a href="/1742297645048.jpg" class="image-link">
+                  <img src="/1742297645048.jpg" class="img-fluid" alt="Image 6">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -169,8 +169,8 @@
               </div>
               <!-- Gallery Item 7 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/7.jpg" class="image-link">
-                  <img src="images/7.jpg" class="img-fluid" alt="Image 7">
+                <a href="/1742297645074.jpg" class="image-link">
+                  <img src="/1742297645074.jpg" class="img-fluid" alt="Image 7">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -178,8 +178,8 @@
               </div>
               <!-- Gallery Item 8 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/8.jpg" class="image-link">
-                  <img src="images/8.jpg" class="img-fluid" alt="Image 8">
+                <a href="/1742297645102.jpg" class="image-link">
+                  <img src="/1742297645102.jpg" class="img-fluid" alt="Image 8">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -187,8 +187,8 @@
               </div>
               <!-- Gallery Item 9 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/9.jpg" class="image-link">
-                  <img src="images/9.jpg" class="img-fluid" alt="Image 9">
+                <a href="/1742297645142.jpg" class="image-link">
+                  <img src="/1742297645142.jpg" class="img-fluid" alt="Image 9">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -196,8 +196,8 @@
               </div>
               <!-- Gallery Item 10 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/10.jpg" class="image-link">
-                  <img src="images/10.jpg" class="img-fluid" alt="Image 10">
+                <a href="/1742297645170.jpg" class="image-link">
+                  <img src="/1742297645170.jpg" class="img-fluid" alt="Image 10">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -205,8 +205,8 @@
               </div>
               <!-- Gallery Item 11 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/11.jpg" class="image-link">
-                  <img src="images/11.jpg" class="img-fluid" alt="Image 11">
+                <a href="/1742297645192.jpg" class="image-link">
+                  <img src="/1742297645192.jpg" class="img-fluid" alt="Image 11">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -214,8 +214,8 @@
               </div>
               <!-- Gallery Item 12 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/12.jpg" class="image-link">
-                  <img src="images/12.jpg" class="img-fluid" alt="Image 12">
+                <a href="/1742297645213.jpg" class="image-link">
+                  <img src="/1742297645213.jpg" class="img-fluid" alt="Image 12">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -223,8 +223,8 @@
               </div>
               <!-- Gallery Item 13 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/13.jpg" class="image-link">
-                  <img src="images/13.jpg" class="img-fluid" alt="Image 13">
+                <a href="/1742297645252.jpg" class="image-link">
+                  <img src="/1742297645252.jpg" class="img-fluid" alt="Image 13">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -232,8 +232,8 @@
               </div>
               <!-- Gallery Item 14 -->
               <div class="col-md-4 col-sm-6 mb-3 gallery-item">
-                <a href="images/14.jpg" class="image-link">
-                  <img src="images/14.jpg" class="img-fluid" alt="Image 14">
+                <a href="/1742297645276.jpg" class="image-link">
+                  <img src="/1742297645276.jpg" class="img-fluid" alt="Image 14">
                 </a>
                 <div class="image-description">
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
